--- a/Index.html
+++ b/Index.html
@@ -1,224 +1,129 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<title>Carta para ti 💌</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-<!-- Precarga de audio (usa los nombres exactos de tus archivos) -->
-<link rel="preload" as="audio" href="inicio.mp3">
-<link rel="preload" as="audio" href="Final.mp3">
-
-<style>
-  body{
-    margin:0;
-    height:100vh;
-    display:grid;
-    place-items:center;
-    font-family: Georgia, "Times New Roman", serif;
-    background:#f3e2c2;
-    overflow:hidden;
-  }
-
-  /* SOBRE */
-  .envelope{
-    position:relative; width:340px; height:220px; cursor:pointer;
-    background: linear-gradient(#e5caa2,#d8b587);
-    border:2px solid #b08968; border-radius:8px;
-    box-shadow:0 10px 30px rgba(0,0,0,.25), inset 0 0 25px rgba(0,0,0,.15);
-  }
-  .envelope .flap{
-    position:absolute; inset:0;
-    background: linear-gradient(#d7b68d,#c7a273);
-    clip-path:polygon(0 0, 50% 55%, 100% 0, 100% 0, 0 0);
-    transform-origin:top;
-    transition:transform .9s ease;
-  }
-  .envelope.open .flap{ transform:rotateX(180deg); }
-  .seal{
-    position:absolute; left:50%; top:52%; transform:translate(-50%,-50%);
-    width:58px; height:58px; border-radius:50%;
-    background: radial-gradient(circle at 30% 30%, #f99, #b21 60%, #7a0);
-    box-shadow: inset 0 2px 8px rgba(0,0,0,.25);
-  }
-
-  /* CARTA */
-  .letter{
-    position:fixed; inset:0; display:none; overflow-y:auto;
-    padding: clamp(28px, 6vw, 72px);
-    line-height:1.9; font-size:clamp(18px, 2.2vw, 22px);
-    background: url('fondo.jpg') center/cover no-repeat;
-    color:#3e2723;
-    box-shadow: inset 0 0 80px rgba(0,0,0,.25), 0 10px 40px rgba(0,0,0,.35);
-  }
-  h2{ text-align:center; color:#8b0000; margin-top:0; }
-
-  .page{ display:none; animation: fadeIn .6s ease both; }
-  .page.active{ display:block; }
-
-  .page img{
-    max-width:80%; border-radius:12px;
-    display:block; margin:20px auto;
-    box-shadow:0 6px 18px rgba(0,0,0,.3);
-  }
-
-  .controls{
-    display:flex; justify-content:center; margin-top:28px;
-  }
-  .btn{
-    border:none; cursor:pointer; padding:10px 18px;
-    font-size:16px; border-radius:8px; color:#fff;
-    background:#8b0000;
-    box-shadow:0 6px 14px rgba(0,0,0,.25);
-  }
-  .btn:hover{ background:#a31212; }
-
-  /* Botón de música */
-  .musicBtn{
-    position:fixed; top:14px; right:14px; z-index:50;
-    display:none; align-items:center; justify-content:center;
-    width:40px; height:40px; border-radius:10px; border:none; cursor:pointer;
-    background:#8b0000; color:#fff; font-size:20px;
-    box-shadow:0 6px 14px rgba(0,0,0,.25);
-  }
-
-  @keyframes fadeIn{ from{opacity:0} to{opacity:1} }
-</style>
+  <meta charset="UTF-8">
+  <title>Carta para ti 💖</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: url('fondo.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      padding: 20px;
+    }
+    .page {
+      display: none;
+      max-width: 800px;
+      background: rgba(0,0,0,0.6);
+      padding: 20px;
+      border-radius: 15px;
+    }
+    .page.active {
+      display: block;
+    }
+    img {
+      max-width: 100%;
+      border-radius: 15px;
+      margin-top: 15px;
+    }
+    button {
+      margin-top: 20px;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 10px;
+      background: pink;
+      font-size: 18px;
+      cursor: pointer;
+    }
+    .final-buttons {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-
-  <!-- SOBRE -->
-  <div class="envelope" id="envelope" title="Ábreme">
-    <div class="flap"></div>
-    <div class="seal"></div>
+  <!-- Páginas con confesión -->
+  <div class="page active" id="page1">
+    <p>A veces me quedo sin palabras cuando pienso en lo mucho que significas para mí, intento buscar la manera de describir lo que siento, pero ninguna palabra parece alcanzar, y aun así, dentro de mí hay una verdad imposible de ocultar, eres lo mejor que me ha pasado en la vida, no necesito adornar lo que siento, porque lo que llevo dentro es real, es fuerte y es eterno, y aunque me falten las palabras, lo que siento por ti se explica solo, eres la persona que cambió mi manera de ver el mundo, la que le dio sentido a mis días y calma a mis noches, y desde que llegaste todo lo que parecía común se volvió extraordinario, porque lo comparto contigo.</p>
+    <img src="foto1.jpg" alt="Foto 1">
+    <button onclick="nextPage(2)">Siguiente</button>
   </div>
 
-  <!-- CARTA -->
-  <main class="letter" id="letter">
-    <h2>Mi amor 💖</h2>
+  <div class="page" id="page2">
+    <p>Cada detalle tuyo me enamora, tu forma de sonreír, tu manera de hablar, eres la luz que ilumina mi vida, y en ti encontré lo que nunca pensé que existiera, un amor sincero, único y profundo, no necesito a nadie más, porque contigo lo tengo todo, eres mi única prioridad, lo que más deseo y lo más valioso que tengo en esta vida.</p>
+    <img src="foto2.jpg" alt="Foto 2">
+    <button onclick="nextPage(3)">Siguiente</button>
+  </div>
 
-    <!-- Página 1 -->
-    <section class="page active">
-      <p>A veces me quedo sin palabras cuando pienso en lo mucho que significas para mí, intento buscar la manera de describir lo que siento, pero ninguna palabra parece alcanzar, y aun así, dentro de mí hay una verdad imposible de ocultar: eres lo mejor que me ha pasado en la vida.</p>
-      <img src="foto1.jpg" alt="Recuerdo 1">
-      <div class="controls"><button class="btn next">Siguiente ➝</button></div>
-    </section>
+  <div class="page" id="page3">
+    <p>Mi corazón late con fuerza solo por ti, y cada día me despierto con la certeza de que quiero ser mejor para ti, porque te lo mereces todo, a tu lado he aprendido lo que es el amor de verdad, ese que no se mide en momentos perfectos, sino en la certeza de que incluso en lo difícil lo único que quiero es seguir contigo.</p>
+    <img src="foto3.jpg" alt="Foto 3">
+    <button onclick="nextPage(4)">Siguiente</button>
+  </div>
 
-    <!-- Página 2 -->
-    <section class="page">
-      <p>No necesito adornar lo que siento, porque lo que llevo dentro es real, es fuerte y es eterno, y aunque me falten las palabras, lo que siento por ti se explica solo: eres la persona que cambió mi manera de ver el mundo, la que le dio sentido a mis días y calma a mis noches.</p>
-      <img src="foto2.jpg" alt="Recuerdo 2">
-      <div class="controls"><button class="btn next">Siguiente ➝</button></div>
-    </section>
+  <div class="page" id="page4">
+    <p>Eres mi presente, mi futuro y mi más grande sueño, no me imagino un camino donde no estés tú, porque simplemente eres lo más bonito que la vida me ha regalado, quiero que sepas que te amo con todo lo que soy, que cada pensamiento mío termina en ti, que cada ilusión y cada plan lleva tu nombre.</p>
+    <img src="foto4.jpg" alt="Foto 4">
+    <button onclick="nextPage(5)">Siguiente</button>
+  </div>
 
-    <!-- Página 3 -->
-    <section class="page">
-      <p>Desde que llegaste, todo lo que parecía común se volvió extraordinario, porque lo comparto contigo. Cada detalle tuyo me enamora: tu forma de sonreír, tu manera de hablar, eres la luz que ilumina mi vida. En ti encontré lo que nunca pensé que existiera: un amor sincero, único y profundo.</p>
-      <img src="foto3.jpg" alt="Recuerdo 3">
-      <div class="controls"><button class="btn next">Siguiente ➝</button></div>
-    </section>
+  <div class="page" id="page5">
+    <p>No hay distancia, ni tiempo, ni nada en este mundo capaz de hacerme dejar de sentir lo que siento, porque lo que siento por ti es amor de verdad, de ese que no se apaga, de ese que crece cada día, de ese que está hecho para durar siempre.</p>
+    <img src="foto5.jpg" alt="Foto 5">
+    <button onclick="nextPage(6)">Siguiente</button>
+  </div>
 
-    <!-- Página 4 -->
-    <section class="page">
-      <p>No necesito a nadie más, porque contigo lo tengo todo. Eres mi única prioridad, lo que más deseo y lo más valioso que tengo en esta vida. Mi corazón late con fuerza solo por ti, y cada día me despierto con la certeza de que quiero ser mejor para ti, porque te lo mereces todo.</p>
-      <img src="foto4.jpg" alt="Recuerdo 4">
-      <div class="controls"><button class="btn next">Siguiente ➝</button></div>
-    </section>
+  <div class="page" id="page6">
+    <p>Hoy, sin miedo ni dudas, quiero decirte que eres la mujer de mi vida, mi único deseo, mi refugio y mi razón, y siempre voy a elegirte a ti, porque tú eres, y siempre serás, mi todo.</p>
+    <img src="foto6.jpg" alt="Foto 6">
+    <button onclick="nextPage(7)">Siguiente</button>
+  </div>
 
-    <!-- Página 5 -->
-    <section class="page">
-      <p>A tu lado he aprendido lo que es el amor de verdad, ese que no se mide en momentos perfectos, sino en la certeza de que incluso en lo difícil lo único que quiero es seguir contigo. Eres mi presente, mi futuro y mi más grande sueño.</p>
-      <img src="foto5.jpg" alt="Recuerdo 5">
-      <div class="controls"><button class="btn next">Siguiente ➝</button></div>
-    </section>
+  <div class="page" id="page7">
+    <p>Por eso, después de abrirte mi corazón, de mostrarte lo que realmente siento y de entregarte estas palabras que nacen de lo más profundo de mí, quiero pedirte algo que llevo tiempo guardando con ilusión.</p>
+    <img src="foto7.jpg" alt="Foto 7">
+    <button onclick="nextPage(8)">Siguiente</button>
+  </div>
 
-    <!-- Página 6 -->
-    <section class="page">
-      <p>No me imagino un camino donde no estés tú, porque simplemente eres lo más bonito que la vida me ha regalado. Quiero que sepas que te amo con todo lo que soy, que cada pensamiento mío termina en ti, que cada ilusión y cada plan lleva tu nombre.</p>
-      <img src="foto6.jpg" alt="Recuerdo 6">
-      <div class="controls"><button class="btn next">Siguiente ➝</button></div>
-    </section>
+  <div class="page" id="page8">
+    <p>Quiero pedirte que me dejes ser parte de tu vida de una forma aún más especial, que me des la oportunidad de caminar de tu mano no solo en sueños, sino en la realidad, y quiero saber si me regalas ese honor, el honor de ser tu novio, porque no hay mayor felicidad para mí que amarte y ser amado por ti ❤️</p>
+    <img src="foto8.jpg" alt="Foto 8">
+    <div class="final-buttons">
+      <button onclick="sayYes()">Sí 💖</button>
+      <button onclick="sayYes()">Sí 💕</button>
+    </div>
+  </div>
 
-    <!-- Página 7 -->
-    <section class="page">
-      <p>No hay distancia, ni tiempo, ni nada en este mundo capaz de hacerme dejar de sentir lo que siento, porque lo que siento por ti es amor de verdad, de ese que no se apaga, de ese que crece cada día, de ese que está hecho para durar siempre.</p>
-      <img src="foto7.jpg" alt="Recuerdo 7">
-      <div class="controls"><button class="btn next">Siguiente ➝</button></div>
-    </section>
+  <!-- Música -->
+  <audio id="inicio" autoplay loop>
+    <source src="inicio.mp3" type="audio/mpeg">
+  </audio>
+  <audio id="final">
+    <source src="Final.mp3" type="audio/mpeg">
+  </audio>
 
-    <!-- Página 8 -->
-    <section class="page">
-      <p>Hoy, sin miedo ni dudas, quiero decirte que eres la mujer de mi vida, mi único deseo, mi refugio y mi razón, y siempre voy a elegirte a ti. Porque tú eres, y siempre serás, mi todo.</p>
-      <img src="foto8.jpg" alt="Recuerdo 8">
-      <div class="controls"><button class="btn next">Siguiente ➝</button></div>
-    </section>
-
-    <!-- Página 9 (petición final) -->
-    <section class="page">
-      <p style="text-align:center; font-size:1.25em; color:#6d1a1a; font-weight:bold;">
-        Por eso, después de abrirte mi corazón, de mostrarte lo que realmente siento y de entregarte estas palabras que nacen de lo más profundo de mí…<br><br>
-        Quiero pedirte algo que llevo tiempo guardando con ilusión:<br><br>
-        ¿Me dejas ser parte de tu vida de una forma aún más especial?<br><br>
-        ¿Me regalas el honor de ser tu novio? 💍❤️
-      </p>
-      <img src="foto9.jpg" alt="Momento final">
-    </section>
-  </main>
-
-  <!-- Elementos de audio y botón de música -->
-  <audio id="songIntro" src="inicio.mp3" preload="auto" loop></audio>
-  <audio id="songFinal" src="Final.mp3" preload="auto"></audio>
-  <button class="musicBtn" id="musicBtn" aria-label="Música">🔊</button>
-
-<script>
-  const envelope = document.getElementById('envelope');
-  const letter   = document.getElementById('letter');
-  const pages    = [...document.querySelectorAll('.page')];
-  const intro    = document.getElementById('songIntro');
-  const outro    = document.getElementById('songFinal');
-  const musicBtn = document.getElementById('musicBtn');
-  let idx = 0;
-
-  intro.volume = 0.6;
-  outro.volume = 0.7;
-
-  // Abrir sobre -> mostrar carta + iniciar música
-  envelope.addEventListener('click', ()=>{
-    envelope.classList.add('open');
-    setTimeout(()=>{
-      envelope.style.display='none';
-      letter.style.display='block';
-      letter.scrollTo({top:0});
-      // Autoplay permitido por el clic del usuario
-      intro.play().catch(()=>{});
-      musicBtn.style.display='inline-flex';
-    }, 950);
-  });
-
-  // Navegación por páginas
-  letter.addEventListener('click', (e)=>{
-    if(!e.target.classList.contains('next')) return;
-    pages[idx].classList.remove('active');
-    idx = Math.min(idx+1, pages.length-1);
-    pages[idx].classList.add('active');
-    letter.scrollTo({top:0, behavior:'smooth'});
-
-    // Si llegamos a la última página, cambia a la música final
-    if (idx === pages.length-1) {
-      if (!outro.paused) return;
-      try { intro.pause(); } catch(e){}
-      outro.currentTime = 0;
-      outro.play().catch(()=>{});
+  <script>
+    let current = 1;
+    function nextPage(n) {
+      document.getElementById("page" + current).classList.remove("active");
+      document.getElementById("page" + n).classList.add("active");
+      current = n;
     }
-  });
 
-  // Botón para silenciar/activar música
-  let muted = false;
-  musicBtn.addEventListener('click', ()=>{
-    muted = !muted;
-    intro.muted = outro.muted = muted;
-    musicBtn.textContent = muted ? '🔇' : '🔊';
-  });
-</script>
+    function sayYes() {
+      document.getElementById("inicio").pause();
+      document.getElementById("final").play();
+      alert("💖 Gracias por decir Sí, te amo 💖");
+    }
+  </script>
 </body>
 </html>
