--- a/index.html
+++ b/index.html
@@ -91,46 +91,50 @@
   <main class="letter" id="letter">
     <h2>Mi amor 💖</h2>
 
-    <!-- CONFESIÓN COMPLETA (8 páginas con fotos) -->
+    <!-- CONFESIÓN NUEVA (8 páginas con fotos) -->
     <section class="page active">
-      <p>A veces me quedo sin palabras cuando pienso en lo mucho que significas para mí, intento buscar la manera de describir lo que siento, pero ninguna palabra parece alcanzar, y aun así, dentro de mí hay una verdad imposible de ocultar: eres lo mejor que me ha pasado en la vida.</p>
+      <p>Desde que llegaste a mi vida algo dentro de mí despertó, Sentí que el mundo era más hermoso, que cada día tenía un nuevo motivo y que mi corazón, sin darse cuenta, empezó a latir con tu nombre, y fue entonces cuando supe que mi mundo nunca volvería a ser el mismo.</p>
       <img src="foto1.jpg" class="foto">
       <div class="controls"><button class="btn next">Siguiente ➝</button></div>
     </section>
     <section class="page">
-      <p>No necesito adornar lo que siento, porque lo que llevo dentro es real, es fuerte y es eterno, y aunque me falten las palabras, lo que siento por ti se explica solo. Eres la persona que cambió mi manera de ver el mundo, la que le dio sentido a mis días y calma a mis noches.</p>
+      <p>No fuiste una casualidad, fuiste el milagro más hermoso que el destino me regaló, trajiste claridad donde había dudas, esperanza donde había vacío y amor donde antes solo había silencio, contigo aprendí que el amor verdadero no se busca... simplemente llega, transforma y florece en lo más profundo del corazón.</p>
       <img src="foto2.jpg" class="foto">
       <div class="controls"><button class="btn next">Siguiente ➝</button></div>
     </section>
     <section class="page">
-      <p>Desde que llegaste todo lo que parecía común se volvió extraordinario, porque lo comparto contigo. Cada detalle tuyo me enamora: tu forma de sonreír, tu manera de hablar. Eres la luz que ilumina mi vida, y en ti encontré lo que nunca pensé que existiera: un amor sincero, único y profundo.</p>
+      <p>A veces me quedo sin palabras cuando pienso en lo mucho que significas para mí, Intento buscar la manera de describir lo que siento, pero ninguna palabra parece alcanzar, y aun así, dentro de mí hay una verdad imposible de ocultar, eres lo mejor que me ha pasado en la vida.</p>
       <img src="foto3.jpg" class="foto">
       <div class="controls"><button class="btn next">Siguiente ➝</button></div>
     </section>
     <section class="page">
-      <p>No necesito a nadie más, porque contigo lo tengo todo. Eres mi única prioridad, lo que más deseo y lo más valioso que tengo en esta vida. Mi corazón late con fuerza solo por ti, y cada día me despierto con la certeza de que quiero ser mejor para ti, porque te lo mereces todo.</p>
+      <p>No necesito adornar lo que siento, porque lo que llevo dentro es real, fuerte y eterno, y aunque me falten las palabras, lo que siento por ti se explica solo, eres la persona que cambió mi manera de ver el mundo, la que le dio sentido a mis días y calma a mis noches.</p>
       <img src="foto4.jpg" class="foto">
       <div class="controls"><button class="btn next">Siguiente ➝</button></div>
     </section>
     <section class="page">
-      <p>A tu lado he aprendido lo que es el amor de verdad, ese que no se mide en momentos perfectos, sino en la certeza de que incluso en lo difícil lo único que quiero es seguir contigo. Eres mi presente, mi futuro y mi más grande sueño. No me imagino un camino donde no estés tú.</p>
+      <p>Desde que llegaste, todo lo que parecía común se volvió extraordinario, ¿sabes por qué? porque lo comparto contigo, Cada momento  contigo es mágico, me vuelves loco, me enamoras, me encantas, me facinas, amo todo de ti, amo tus ojitos, tu voz, tu manera de hablar, esa luz que ilumina mi vida! En ti encontré lo que nunca pensé encontrar, un amor sincero, único y profundo.</p>
       <img src="foto5.jpg" class="foto">
       <div class="controls"><button class="btn next">Siguiente ➝</button></div>
     </section>
     <section class="page">
-      <p>Simplemente eres lo más bonito que la vida me ha regalado. Quiero que sepas que te amo con todo lo que soy, que cada pensamiento mío termina en ti, que cada ilusión y cada plan lleva tu nombre. No hay distancia, ni tiempo, ni nada capaz de hacerme dejar de sentir lo que siento.</p>
+      <p>No necesito a nadie más porque contigo lo tengo todo, eres mi única prioridad, lo que más deseo y lo más valioso que tengo en esta vida, mi corazón late con fuerza solo por ti, y cada día me despierto con la certeza de que quiero ser mejor para ti, porque tu te mereces absolutamente todo.</p>
       <img src="foto6.jpg" class="foto">
       <div class="controls"><button class="btn next">Siguiente ➝</button></div>
     </section>
     <section class="page">
-      <p>Porque lo que siento por ti es amor de verdad, de ese que no se apaga, de ese que crece cada día, de ese que está hecho para durar siempre. Y hoy, sin miedo ni dudas, quiero decirte que eres la mujer de mi vida, mi único deseo, mi refugio y mi razón. Siempre voy a elegirte a ti.</p>
+      <p>A tu lado he aprendido lo que es el amor de verdad, ese que no se mide en momentos perfectos, sino en la certeza de que incluso en los momentos difíciles estamos juntos, amándonos, apoyándonos, eres mi presente, mi futuro y mi más grande sueño, no me imagino un camino donde no estés tú, porque simplemente eres lo más bonito que la vida me ha regalado.</p>
+      <p>Quiero que sepas que te amo con todo lo que soy, que cada pensamiento mío termina en ti, que cada ilusión y cada plan lleva tu nombre, no hay distancia, ni tiempo, ni nada en este mundo capaz de hacerme dejar de sentir lo que siento, porque lo que siento por ti es amor de verdad, de ese que no se apaga, de ese que crece cada día, de ese que está hecho para durar siempre.</p>
       <img src="foto7.jpg" class="foto">
       <div class="controls"><button class="btn next">Siguiente ➝</button></div>
     </section>
     <section class="page">
       <p style="text-align:center; font-size:1.25em; color:#6d1a1a; font-weight:bold;">
-        Por eso, después de abrirte mi corazón, de mostrarte lo que realmente siento y de entregarte estas palabras que nacen de lo más profundo de mí, quiero pedirte algo que llevo tiempo guardando con ilusión:<br><br>
-        ¿Me regalas el honor de ser tu novio?
+      Y hoy, sin miedo ni dudas, quiero decirte algo que llevo tiempo guardando con ilusión:<br><br>
+      Eres la mujer de mi vida, mi único deseo, mi refugio y mi razón de seguir adelante, Siempre voy a elegirte a ti, porque tú eres, y siempre serás, mi todo.<br><br>
+      Por eso, después de abrirte mi corazón y mostrarte lo que realmente siento, quiero pedirte algo especial:<br><br>
+      ¿Me regalas ese honor?<br><br>
+      El honor de ser tu novio, porque no hay mayor felicidad para mí que amarte y ser amado por ti.
       </p>
       <img src="foto8.jpg" class="foto">
       <div class="controls">
